# conkyberry

./: .env.example  .gitignore  .gitlint  CHANGELOG.md  README.md  config.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-local.txt  requirements.in  requirements.txt
app/: __init__.py  extensions.py  models.py  schema.py
app/models/: resource.py
front/: package-lock.json  package.json
scripts/: __init__.py  data_collection.py  fill_resource_data.py  seeds.py  update_project_version.py
